[project]
name = "rednose"
requires-python = ">= 3.9"
version = "0.1.0"

dependencies = [
  "sympy",
  "numpy<2.0",
  "scipy",
  "tqdm",
  "cffi",
  "scons",
  "Cython",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-xdist",
]

[build-system]
requires = ["setuptools","scons","Cython","numpy<2.0","sympy", "pytest", "cffi"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 160
target-version="py39"

[tool.ruff.lint]
select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A"]
ignore = ["W292", "E741", "E402", "C408", "ISC003"]
flake8-implicit-str-concat.allow-multiline=false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pytest.main".msg = "pytest.main requires special handling that is easy to mess up!"
"unittest".msg = "Use pytest"

[tool.pytest.ini_options]
addopts = "--durations=10 -n auto"
