[project]
name = "rednose"
version = "0.1.0"
description = "Kalman filter library"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [{name = "comma.ai"}]
dependencies = [
  "numpy",
  "cffi",
  "sympy",
  "scons",
  "Cython",
]

[project.optional-dependencies]
dev = ["scipy", "pytest", "pytest-xdist", "ruff"]

[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"rednose.helpers" = ["chi2_lookup_table.npy", "*.h", "*.cc", "*.pyx", "*.pxd"]
"rednose.logger" = ["*.h"]
"rednose.templates" = ["*"]
"rednose.site_scons" = ["*.py"]
